--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -39,6 +39,13 @@ body {
   min-height: 100vh;
 }
 
+
+::before,
+::after {
+  border: none !important;
+
+}
+
 .container {
   width: 100%;
   padding: 0 0.75rem;
