--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -63,6 +63,59 @@
     }
   }
 
+  .form-control {
+    &--file-upload {
+      position: relative;
+
+
+      input {
+        width: 100px;
+        height: 100px;
+        position: absolute;
+        bottom: 14px;
+        right: 0;
+        z-index: 1;
+        left: 0;
+        opacity: 0;
+        padding: 0;
+        cursor: pointer;
+      }
+    }
+
+    .file-img {
+      position: relative;
+
+      .img {
+        width: 100px;
+        height: 100px;
+        border-radius: 10px;
+        object-fit: cover;
+        background-color: #fff;
+        border: solid 1px #f2f2f2;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .file-upload-img {
+    position: relative;
+    width: 100px;
+    height: 100px;
+
+    &--remove {
+      width: 30px;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      top: -14px;
+      right: -14px;
+      z-index: 1;
+      cursor: pointer;
+    }
+  }
+
   // input[type="file"] {
   //   opacity: 0;
   // }
